fix: alignment in success page in mSite forgot password

--- a/src/route/PasswordChangePage/PasswordChangeSuccessPage.style.scss
+++ b/src/route/PasswordChangePage/PasswordChangeSuccessPage.style.scss
@@ -1,5 +1,8 @@
 .SuccessPageContainer {
   text-align: center;
+  @include mobile {
+    margin-top: 200px;
+  }
   .successIcon {
     width: 120px;
     height: 120px;
